@@ -661,14 +661,10 @@
                      (insert "JUPDATE (env, JINSTANTIATE (env, jclass), ")
                      t)
                     ((create-method-p method)
-                     (insert "JUPDATE (env, JINSTANTIATENAME (env, \"")
-                     (insert (java-qualified-native-class-name protocol :using))
-                     (insert "\"), ")
+                     (insert "JUPDATE (env, JINSTANTIATEUSINGFROMCLASS (env, jclass), ")
                      t)
                     ((string= "-createEnd" signature)
-                     (insert "JSWITCHUPDATE (env, jobj, JINSTANTIATENAME (env, \"")
-                     (insert (java-qualified-native-class-name protocol :using))
-                     (insert "\"), ")
+                     (insert "JSWITCHUPDATE (env, jobj, JINSTANTIATEUSINGFROMOBJECT (env, jobj), ")
                      t)
                     ((string= java-return "Object")
                      (insert "JFINDJAVA (")
