@@ -1,3 +1,9 @@
+1999-03-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* java-stub.el (java-print-native-method): Use
+	JINSTANTIATEUSINGFROMCLASS for +create* and
+	JINSTANTIATEUSINGFROMOBJECT for -createEnd.
+
 1999-03-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* java-stub.el (java-suffix-for-phase): Use S and U instead of _s
